# MasterDegreeGraduateWork

./: .gitignore  CMakeLists.txt
cmake/: copy_dir_to_target_bin.cmake
res/: description.txt  exp_p_1.txt
src/: CMakeLists.txt
src/alglib/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/core/: CMakeLists.txt
src/core/Core/: Application.cpp  Application.hpp  Log.cpp  Log.hpp  Window.cpp  Window.hpp
src/core/Core/Debug/: Instrumentor.hpp
src/core/Unfolding/: Bin.cpp  Bin.hpp  LoadData.cpp  LoadData.hpp  Matrix.hpp  UnfoldingApp.cpp  UnfoldingApp.hpp  Utils.hpp
src/core/unfolding/: load_data.cpp  load_data.hpp  migration_mat.hpp  static_vector.hpp  svd.hpp  system_solver.hpp  unfolding_app.cpp  unfolding_app.hpp
work_text/: bibliography.bib  master_degree_diplom.tex  presentation.tex  presentation_short.tex  presentation_short_text.tex  ugost2003.bst
